# maximum_agents

./: .gitignore  PUBLISHING.md  gpt5slop.md  publish.sh  publish_requirements.txt  publish_to_pypi.py  pyproject.toml
src/: abstract.py  base.py
src/datastore/: backends.py  core.py  types.py
src/maximum_agents/: __init__.py  base.py  document_types.py  pydantic_final_answer_tools.py  records.py
src/maximum_agents/builders/: builder.py
