[project]
name = "maximum-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Nel",email = "lukas@lotushealth.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smolagents[litellm] (>=1.20.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "duckdb (>=0.9.0,<1.0.0)",
    "Pillow (>=10.0.0,<11.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "maximum_agents", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
